--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css"
+    <link rel="stylesheet" href="style.css">
     <title>Alura-Plus</title>
 </head>
 <body>
     
     <h1> Com o Combo+, você pode aproveitar o Alura+ e o Alura Língua por um preço único</h1>
-    
+
 </body>
 </html>
