--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>Alura-Plus</title>
 </head>
 <body>
-    
+    <section class="principal container"> 
     <h1> Com o Combo+, você pode aproveitar o Alura+ e o Alura Língua por um preço único</h1>
-
+    <img src="img/Combo.png">
+</section>
 </body>
 </html>
