--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <section class="principal container"> 
     <h1> Com o Combo+, você pode aproveitar o Alura+ e o Alura Língua por um preço único.</h1>
     <img src="img/Combo.png" alt="o alura combo é a junção do alura+ com o alura línguas">
-    <a href="https://www.alura.com.br/" <Assine por 12x de R$120,00*></a>
+    <a href="https://www.alura.com.br/" <Assine por 12x de R$120,00*</a>
 </section>
 </body>
 </html>
