--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1> Com o Combo+, você pode aproveitar o Alura+ e o Alura Língua por um preço único.</h1>
     <img src="img/Combo.png" alt="o alura combo é a junção do alura+ com o alura línguas">
     <a href="https://www.alura.com.br/" class="container__botao"> Assine por 12x de R$120,00*</a>
-    <a href="https://www.alura.com.br/" class="botao_secundario"> Assinar somente o Alura+</a>
+    <a href="https://www.alura.com.br/" class="container__botao botao_secundario"> Assinar somente o Alura+</a>
 </div>
 </section>
 </body>
