--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Alura-Plus</title>
+    <title> Alura Plus </title>
 </head>
 <body>
     <section class="principal container"> 
@@ -13,6 +13,7 @@
     <img src="img/Combo.png" alt="o alura combo é a junção do alura+ com o alura línguas">
     <a href="https://www.alura.com.br/" class="container__botao"> Assine por 12x de R$120,00*</a>
     <a href="https://www.alura.com.br/" class="container__botao botao_secundario"> Assinar somente o Alura+</a>
+    <p class="container__aviso"> O poeço pode variar caso a assinatur seja feita em outros planos</p>
 </div>
 </section>
 </body>
