--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <img src="img/Combo.png" alt="o alura combo é a junção do alura+ com o alura línguas">
     <a href="https://www.alura.com.br/" class="container__botao"> Assine por 12x de R$120,00*</a>
     <a href="https://www.alura.com.br/" class="container__botao botao_secundario"> Assinar somente o Alura+</a>
-    <p class="container__aviso"> O preço pode variar caso a assinatur seja feita em outros planos</p>
+    <p class="container__aviso"> *O preço pode variar caso a assinatur seja feita em outros planos</p>
 </div>
 </section>
 </body>
