--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <section class="principal container"> 
         <div>
     <h1> Com o Combo+, você pode aproveitar o Alura+ e o Alura Língua por um preço único.</h1>
-    <img src="Combo.png" alt="o alura combo é a junção do alura+ com o alura línguas">
+    <img src="Combo.png" alt="o alura combo é a junção do alura+ com o alura línguas" class="container__imagem">
     <a href="https://www.alura.com.br/" class="container__botao"> Assine por 12x de R$120,00*</a>
     <a href="https://www.alura.com.br/" class="container__botao botao_secundario"> Assinar somente o Alura+</a>
     <p class="container__aviso"> *O preço pode variar caso a assinatur seja feita em outros planos</p>
