--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <section class="principal container"> 
-        <div>
+        <div class="container__caixa">
     <h1> Com o Combo+, você pode aproveitar o Alura+ e o Alura Língua por um preço único.</h1>
     <img src="Combo.png" alt="o alura combo é a junção do alura+ com o alura línguas" class="container__imagem">
     <a href="https://www.alura.com.br/" class="container__botao"> Assine por 12x de R$120,00*</a>
