--- a/index.html
+++ b/index.html
@@ -16,5 +16,14 @@
     <p class="container__aviso"> *O preço pode variar caso a assinatur seja feita em outros planos</p>
 </div>
 </section>
+<section class="container secundario">
+<img src="" alt="um monitor e um celular com o Alura Plus aberto"
+cls="secundario__imagem">
+<div class="container__descricao">
+    <h2 class="descricao__titulo"> Assista do seu jeito </h2>
+    <p clas="descricao__texto">  Aproveita a tela grande de TV ou assista no tablet.</p>
+
+</div>
+</section>
 </body>
 </html>
