--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 cls="secundario__imagem">
 <div class="container__descricao">
     <h2 class="descricao__titulo"> Assista do seu jeito </h2>
-    <p clas="descricao__texto">  Aproveita a tela grande de TV ou assista no tablet.</p>
+    <p clas="descricao__texto">  Aproveita a tela grande de TV ou assista no tablet, laptop, celular e outros aparelhos. Nossa seleção de cursos não para de crescer</p>
 
 </div>
 </section>
