--- a/index.html
+++ b/index.html
@@ -25,5 +25,10 @@ cls="secundario__imagem">
 
 </div>
 </section>
+
+<section class="dispositivos">
+    <h2 class="dispositivos__titulo">Disponível nos seus dispositivos favoritos</h2>
+</section>
+
 </body>
 </html>
