--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@ cls="secundario__imagem">
 
 <section class="dispositivos">
     <h2 class="dispositivos__titulo">Disponível nos seus dispositivos favoritos</h2>
+    <img src="tv.png" alt="icone de televisão"
 </section>
 
 </body>
