--- a/index.html
+++ b/index.html
@@ -28,7 +28,20 @@ cls="secundario__imagem">
 
 <section class="dispositivos">
     <h2 class="dispositivos__titulo">Disponível nos seus dispositivos favoritos</h2>
-    <img src="tv.png" alt="icone de televisão"
+<ul class="dispositivos__lista">
+ <li>
+    <img src="tv.png" alt="icone de televisão">
+    <h3 class="lista__item"> TV </h3>
+</li>
+<li>
+    <img src="computador.png" alt="icone de computador">
+    <h3 class="lista__item"> Computador </h3>
+</li>
+<li>
+    <img src="celular.png" alt="icone de celular">
+    <h3 class="lista__item"> Celular </h3>
+</li>
+</ul>
 </section>
 
 </body>
