--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </div>
 </section>
 <section class="container secundario">
-<img src="" alt="um monitor e um celular com o Alura Plus aberto"
+<img src="Plataformas.png" alt="um monitor e um celular com o Alura Plus aberto"
 cls="secundario__imagem">
 <div class="container__descricao">
     <h2 class="descricao__titulo"> Assista do seu jeito </h2>
