--- a/index.html
+++ b/index.html
@@ -43,6 +43,30 @@ cls="secundario__imagem">
 </li>
 </ul>
 </section>
+<footer class="rodape">
+    <img src="Logo.png" alt="texto alura+">
+    <li>
+        <a href="#"> Idioma </a>
+    </li>
+    <li>
+        <a href="#"> Dispositivos compatíveis </a>
+    </li>
+    <li>
+        <a href="#"> Contrato de assinatura </a>
+    </li>
+    <li>
+        <a href="#"> Política de privacidade </a>
+    </li>
+    <li>
+        <a href="#"> Proteção de dados no Brasil </a>
+    </li>
+    <li>
+        <a href="#"> Anúncios personalizados </a>
+    </li>
+    <li>
+        <a href="#"> Ajuda </a>
+    </li>
+</footer>
 
 </body>
 </html>
