--- a/index.html
+++ b/index.html
@@ -45,25 +45,25 @@ cls="secundario__imagem">
 </section>
 <footer class="rodape">
     <img src="Logo.png" alt="texto alura+">
-    <li>
+    <li class="lista__link">
         <a href="#"> Idioma </a>
     </li>
     <li>
         <a href="#"> Dispositivos compatíveis </a>
-    </li>
+    </li class="lista__link">
     <li>
         <a href="#"> Contrato de assinatura </a>
     </li>
-    <li>
+    <li class="lista__link">
         <a href="#"> Política de privacidade </a>
     </li>
-    <li>
+    <li class="lista__link">
         <a href="#"> Proteção de dados no Brasil </a>
     </li>
-    <li>
+    <li class="lista__link">
         <a href="#"> Anúncios personalizados </a>
     </li>
-    <li>
+    <li class="lista__link">
         <a href="#"> Ajuda </a>
     </li>
 </footer>
